--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
   </style>
 </head>
 <body>
+  <div class="bubbles-bg">
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+</div>
 
 <!-- 11A -->
 <section class="form-group">
